--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -63,7 +63,7 @@ $titlefontsz: 16px;
 
 nav {
     box-shadow: 0 0 30px rgba(0, 0, 0, 0.4);
-    background: transparent;
+    background: $dark-nord;
     backdrop-filter: blur(200px);
     border-radius: 2px;
     z-index: 9999;
@@ -167,7 +167,7 @@ body {
     color: white;
     font-size: 40px;
     font-family: "Roboto", sans-serif;
-    padding-top: 20%;
+    padding-top: 15%;
 }
 
 .qrcs {
@@ -175,6 +175,11 @@ body {
     justify-content: space-evenly;
     padding-top: 10%;
     margin-bottom: 10%;
+    align-items: center;
+}
+
+.qrcs-contain {
+    max-width: 100%;
 }
 
 .words-about {
